# aws-certbot-lambda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: main.yml  pr-validation.yml
lambda/: certbot_handler.py  lambda_function.py  requirements.txt
terraform/: README.md  eventbridge.tf  iam.tf  lambda.tf  locals.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_certificate_manager.py  test_lambda_functions.py
