[project]
name = "aws-certbot-lambda"
version = "0.1.0"
description = "Serverless TLS certificate renewal using Let's Encrypt ACME protocol"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["lambda"]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "moto[secretsmanager,route53]>=4.2",
    "acme>=2.7",
    "boto3>=1.34",
    "cryptography>=41.0",
    "josepy>=1.14",
    "aws-lambda-powertools>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lambda"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=lambda",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["lambda"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
